added corn dog images updated index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Recipes</h1>
     <a href="../odin-recipes/recipes/lasagna.html"><h3>Lasagna Recipe</h3></a>
+    <a href="../odin-recipes/recipes/corn-dog.html"><h3>Corn Dog Recipe</h3></a>
 </body>
 </html>
